--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,17 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello React!</title>
+        <title>House Huntr</title>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
-        <div id="example"></div>
-
-        <!-- Dependencies -->
-        <script src="./node_modules/react/umd/react.development.js"></script>
-        <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-
-        <!-- Main -->
-        <script src="./dist/main.js"></script>
     </body>
 </html>
 
