--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <title>House Huntr</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+        <script type="text/javascript" src="bundle.js"></script>
     </head>
     <body>
     </body>
